--- a/README.adoc
+++ b/README.adoc
@@ -3,3 +3,11 @@
 == Flying Cat
 
 link:flying-cat.sb3[flying-cat.sb3]
+
+== Wizard
+
+link:wizard.sb3[wizard.sb3]
+
+== Pong Game
+
+link:pang-game.sb3[pang-game.sb3]
